added a journal page

--- a/index.html
+++ b/index.html
@@ -33,6 +33,39 @@
         </div>
       </form>
     </div>
-    <div class="dairy-container"></div>
+    <div class="grid-container">
+      <div class="dairy-PG bd-rd">
+        <div class="top-div bd-rd-bt p-2">
+          <p>about-journal</p>
+          <p>20/06/2024</p>
+        </div>
+        <div class="mid-div bd-rd-bt p-2">
+          <p>
+            A journal is simply a private place to write down your thoughts, feelings, experiences,
+            or reflections on a regular basis, often for the purpose of self-reflection and
+            self-expression. A journal may also be a daily log of activities, notes, ideas, or
+            insights.
+          </p>
+        </div>
+        <div class="btm-div p-2">
+          <p>.</p>
+        </div>
+      </div>
+      <div class="dairy-PG bd-rd">
+        <div class="top-div bd-rd-bt p-2">
+          <p>My-journal</p>
+          <p>date:</p>
+        </div>
+        <div class="mid-div bd-rd-bt p-2">
+          <p>
+            Hi, today iam able to develop a simple digital journal design using html and css and im
+            happy with its result LOL
+          </p>
+        </div>
+        <div class="btm-div p-2">
+          <p>.</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
