--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ONLINE DAIRY</title>
     <link rel="stylesheet" href="./style.css" />
+    <script src="script.js" defer></script>
   </head>
   <body>
     <div>
@@ -34,24 +35,19 @@
       </form>
     </div>
     <div class="grid-container">
-      <div class="dairy-PG bd-rd">
+      <!-- <div class="dairy-PG bd-rd">
         <div class="top-div bd-rd-bt p-2">
-          <p>about-journal</p>
-          <p>20/06/2024</p>
+          <p class="title"></p>
+          <p class="date"></p>
         </div>
         <div class="mid-div bd-rd-bt p-2">
-          <p>
-            A journal is simply a private place to write down your thoughts, feelings, experiences,
-            or reflections on a regular basis, often for the purpose of self-reflection and
-            self-expression. A journal may also be a daily log of activities, notes, ideas, or
-            insights.
-          </p>
+          <p class="text-area"></p>
         </div>
         <div class="btm-div p-2">
-          <p>.</p>
+          <p class="btn"></p>
         </div>
-      </div>
-      <div class="dairy-PG bd-rd">
+      </div> -->
+      <!-- <div class="dairy-PG bd-rd">
         <div class="top-div bd-rd-bt p-2">
           <p>My-journal</p>
           <p>date:</p>
@@ -65,7 +61,7 @@
         <div class="btm-div p-2">
           <p>.</p>
         </div>
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
