--- a/index.html
+++ b/index.html
@@ -11,29 +11,29 @@
     <div>
       <h1>MY JOURNAL</h1>
     </div>
-    <div class="form-div">
-      <form class="JD-form">
-        <div class="cont-div">
-          <label for="title">Journal-Title:</label>
-          <input class="enter-box" type="text" id="title" placeholder="enter a title" />
-        </div>
-        <div class="cont-div">
-          <label for="date">Enter a date:</label>
-          <input class="enter-box" type="date" id="date" />
-        </div>
-        <div class="big-textarea">
-          <label for="big-textbox">Textarea:</label>
-          <textarea
-            name="textbox"
-            id="big-textbox"
-            placeholder="Write your thoughts.....!"
-          ></textarea>
-        </div>
-        <div class="cont-div">
-          <button type="submit">submit</button>
-        </div>
-      </form>
-    </div>
+
+    <form class="JD-form">
+      <div class="cont-div">
+        <label for="title">Journal-Title:</label>
+        <input class="enter-box" type="text" id="title" placeholder="enter a title" />
+      </div>
+      <div class="cont-div">
+        <label for="date">Enter a date:</label>
+        <input class="enter-box" type="date" id="date" />
+      </div>
+      <div class="big-textarea">
+        <label for="big-textbox">Textarea:</label>
+        <textarea
+          name="textbox"
+          id="big-textbox"
+          placeholder="Write your thoughts.....!"
+        ></textarea>
+      </div>
+      <div class="cont-div btn-pd">
+        <button type="submit">submit</button>
+      </div>
+    </form>
+
     <div class="grid-container">
       <!-- <div class="dairy-PG bd-rd">
         <div class="top-div bd-rd-bt p-2">
